--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: Gumela;
+  src: url('./fonts/Gumela\ Regular.otf');
+}
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Gumela";
+  font-weight: normal;
+  font-size: 20px;
+}
+.App{
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* .App::before{
+  background: url('./img/james-harrison-vpOeXr5wmR4-unsplash.jpg') no-repeat center center/cover;
+  background: url('./img/altumcode-XMFZqrGyV-Q-unsplash.jpg') no-repeat center center/cover;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.7;
+  background-size: cover;
+} */
+/* @media screen and (max-width:480px) {
+  .App::before{
+    background: url('./img/james-harrison-vpOeXr5wmR4-unsplash.jpg') no-repeat center center/cover;
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 200vh;
+  width: 100vw;
+  z-index: -1;
+  opacity: 0.4;
+  background-size: cover;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+} */
