--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,143 +1,147 @@
-.about{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: fit-content;
-    margin-top: 20px;
+.about {
+	display: flex;
+	/* align-items: center; */
+	width: 100vw;
+	justify-content: center;
+	height: fit-content;
+	margin-top: 30px;
 }
-.about_left{
-    display: flex;
-    flex-direction: column;
-    width: 50vw;
-    height: fit-content;
-    margin: 18px 14px;
-    padding: 18px 28px;
-    box-shadow: 0px 0px 25px 0px rgb(170, 75, 0, 0.5);
+.about_left {
+	display: flex;
+	flex-direction: column;
+	width: 40vw;
+	height: fit-content;
+	margin: 38px 14px;
+	padding: 48px 28px;
+	box-shadow: 0px 0px 25px 0px rgb(170, 75, 0, 0.5);
+	border-top-right-radius: 128px;
+	border-bottom-left-radius: 38px;
 }
-.about_first{
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: brown;
+.about_first {
+	font-size: 1.2rem;
+	font-weight: bold;
+	color: brown;
 }
-.about_second{
-    font-size: 1.6rem;
-    font-weight: bold;
-    margin-left: 33px;
-    width: fit-content;
-    padding: 4px;
-    color: blue;
-    box-shadow: 0px 0px 5px 0px rgb(0, 0, 255, 0.5);
+.about_second {
+	font-size: 1.6rem;
+	font-weight: bold;
+	margin-left: 33px;
+	width: fit-content;
+	padding: 4px 8px;
+	color: blue;
+	box-shadow: 0px 0px 5px 0px rgb(0, 0, 255, 0.5);
+	border-top-left-radius: 22px;
+	border-bottom-right-radius: 18px;
 }
-.about_third{
-    font-size: 1.2rem;
-    font-weight: bold;
-    margin-left: 53px;
-    color: brown;
+.about_third {
+	font-size: 1.2rem;
+	font-weight: bold;
+	margin-left: 53px;
+	color: brown;
 }
-.about_forth{
-    font-size: 16px;
-    margin-left: 200px;
-    padding: 10px 0;
+.about_forth {
+	font-size: 16px;
+	/* margin-left: 200px; */
+	/* padding: 10px 0; */
 }
-.about_li{
-    margin: 22px 0;
+.about_li {
+	margin: 18px 0;
 }
-.bold{
-    font-size: 16px;
-    font-weight: bold;
-    color: blue;
+.bold {
+	font-size: 16px;
+	font-weight: bold;
+	color: blue;
 }
-.about_right{
-    margin-top: 30px;
-    margin-left: 55px;
-    width: 45vw;
-    height: 70vh;
-    /* margin-left: 230px; */
+.about_right {
+	margin-top: 30px;
+	margin-left: 55px;
+	width: 45vw;
+	/* height: 70vh; */
+	margin-bottom: 46px;
+	/* margin-left: 230px; */
 }
-.w-right{
-    position: relative;
-    /* margin-left: 5rem; */
+.w-right {
+	position: relative;
+	/* margin-left: 5rem; */
 }
-.w-mainCircle{
-    position: absolute;
-    left: 1rem;
-    width: 18rem;
-    height: 18rem;
-    top: 2rem;
-    border-radius: 100%;
-    background: white;
-    box-shadow: 0px 0px 25px 0px rgb(170, 75, 0, 0.5);
-    
+.w-mainCircle {
+	position: absolute;
+	left: 1rem;
+	width: 18rem;
+	height: 18rem;
+	top: 2rem;
+	border-radius: 100%;
+	background: white;
+	box-shadow: 0px 0px 25px 0px rgb(170, 75, 0, 0.5);
 }
-.w-secCircle{
-    position: absolute;
-    width: 6rem;
-    height: 6rem;
-    background-color: white;
-    border-radius: 100%;
-    border: 5px solid #ebebeb;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 0px 25px 0px rgb(0, 0, 255, 0.5);
-
+.w-secCircle {
+	position: absolute;
+	width: 6rem;
+	height: 6rem;
+	background-color: white;
+	border-radius: 100%;
+	border: 5px solid #ebebeb;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 0px 0px 25px 0px rgb(0, 0, 255, 0.5);
 }
-.w-mainCircle > :nth-child(1){
-    top: -3rem;
-    left: 6rem;
+.w-mainCircle > :nth-child(1) {
+	top: -3rem;
+	left: 6rem;
 }
-.w-mainCircle > :nth-child(2){
-    top: 5rem;
-    left: -3rem;
+.w-mainCircle > :nth-child(2) {
+	top: 5rem;
+	left: -3rem;
 }
-.w-mainCircle > :nth-child(3){
-    top: 5rem;
-    left: 6rem;
+.w-mainCircle > :nth-child(3) {
+	top: 5rem;
+	left: 6rem;
 }
-.w-mainCircle > :nth-child(4){
-    top: 5rem;
-    left: 15rem;
+.w-mainCircle > :nth-child(4) {
+	top: 5rem;
+	left: 15rem;
 }
-.w-mainCircle > :nth-child(5){
-    top: 13rem;
-    left: 6rem;
+.w-mainCircle > :nth-child(5) {
+	top: 13rem;
+	left: 6rem;
 }
-.mongo{
-    width: 115px;
-    border-radius: 100%;
+.mongo {
+	width: 115px;
+	border-radius: 100%;
 }
-.express{
-    width: 115px;
-    border-radius: 100%;
+.express {
+	width: 115px;
+	border-radius: 100%;
 }
-.mern{
-width: 115px;
-border-radius: 100%;
+.mern {
+	width: 115px;
+	border-radius: 100%;
 }
-.node{
-    width: 115px;
-    border-radius: 100%;
+.node {
+	width: 115px;
+	border-radius: 100%;
 }
-.react{
-    width: 115px;
-    border-radius: 100%;
+.react {
+	width: 115px;
+	border-radius: 100%;
 }
 @media (prefers-reduced-motion: no-preference) {
-    .App_logo {
-      animation: App-logo-spin infinite 15s linear;
-    }
+	.App_logo {
+		animation: App-logo-spin infinite 15s linear;
+	}
 }
 @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
-.App_logo:hover{
-    animation-duration: 30s;
+.App_logo:hover {
+	/* animation-duration: 30s; */
+	cursor: pointer;
 }
 /* .w-backCircle{
     position: absolute;
@@ -147,99 +151,97 @@ border-radius: 100%;
     z-index: -1;
     margin-left: -8rem;
 } */
- @media screen and (max-width:580px) {
-    .about{
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: center;
-        height: fit-content;
-        /* width: 100vw; */
-        margin-top: 10px;
-    }
-    .about_left{
-        width: 80vw;
-        height: fit-content;
-        margin: 5px 18px;
-        padding: 2px 23px;
-        margin-top: 290px;
-    }
-    .about_first{
-        font-size: 1rem;
-        font-weight: bold;
-    }
-    .about_second{
-        font-size: 1.3rem;
-        font-weight: bold;
-        margin-left: 40px;
-        margin-right: 180px;
-        padding: 6px;
-    }
-    .about_third{
-        font-size: 1rem;
-        font-weight: bold;
-        margin-left: 3px;
-    }
-    .about_forth{
-        margin-left: 2px;
-        padding: 10px 0;
-    }
-    .about_li{
-        font-size: 14px;
-        margin: 22px 0;
-    }
-    .bold{
-        /* font-size: 1rem; */
-        font-weight: bold;
-    }
-    .about_right{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 14px;
-        margin-left: 0px;
-        margin-right: 230px;
-        width: 100vw;
-        height: fit-content;
-        transform: scale(0.6);
-        /* margin-left: 30px;
+@media screen and (max-width: 580px) {
+	.about {
+		display: flex;
+		flex-direction: column-reverse;
+		align-items: center;
+		justify-content: center;
+		height: fit-content;
+		/* width: 100vw; */
+		margin-top: 10px;
+	}
+	.about_left {
+		width: 80vw;
+		/* height: fit-content; */
+		margin: 5px 18px;
+		padding: 2px 23px;
+		margin-top: 290px;
+	}
+	.about_first {
+		font-size: 1rem;
+		font-weight: bold;
+	}
+	.about_second {
+		font-size: 1.3rem;
+		font-weight: bold;
+		margin-left: 40px;
+		margin-right: 180px;
+		padding: 6px;
+	}
+	.about_third {
+		font-size: 1rem;
+		font-weight: bold;
+		margin-left: 3px;
+	}
+	.about_forth {
+		margin-left: 2px;
+		padding: 4px 0;
+	}
+	.about_li {
+		font-size: 14px;
+		/* margin: 22px 0; */
+	}
+	.bold {
+		/* font-size: 1rem; */
+		font-weight: bold;
+	}
+	.about_right {
+		/* display: flex; */
+		/* align-items: center; */
+		/* justify-content: center; */
+		margin-top: 14px;
+		margin-left: -40px;
+		/* margin-right: 230px; */
+		width: 100vw;
+		/* height: fit-content; */
+		transform: scale(0.6);
+		/* margin-left: 30px;
         margin-right: 40px; */
-    }
+	}
 }
-@media screen and (min-width:581px) and (max-width:990px) {
-    .about{
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: center;
-        height: fit-content;
-    }
-    .about_left{
-        /* height: fit-content; */
-        width: fit-content;
-        margin: 10px 10px;
-        margin-top: 333px;
-        padding: 12px 20px;
-    }
-    .about_forth{
-        font-size: 16px;
-        margin-left: 160px;
-        padding: 10px 0;
-    }
-    .about_li{
-        margin: 22px 0;
-    }
-    .about_right{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 30px;
-        margin-left: 0px;
-        margin-right: 230px;
-        width: 100vw;
-        height: fit-content;
-        transform: scale(0.7);
-
-    }
-
+@media screen and (min-width: 581px) and (max-width: 990px) {
+	.about {
+		/* display: flex; */
+		flex-direction: column-reverse;
+		/* align-items: center; */
+		/* justify-content: center; */
+		/* height: fit-content; */
+	}
+	.about_left {
+		/* height: fit-content; */
+		width: fit-content;
+		margin: 10px 18px;
+		margin-top: 333px;
+		padding: 12px 28px;
+	}
+	.about_forth {
+		font-size: 16px;
+		/* margin-left: 160px; */
+		/* padding: 10px 0; */
+	}
+	.about_li {
+		margin: 22px 0;
+	}
+	.about_right {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-top: 30px;
+		/* margin-left: 0px; */
+		/* margin-right: 230px; */
+		/* width: 100vw; */
+		height: fit-content;
+		transform: scale(0.7);
+	}
 }
