--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,231 +1,247 @@
-.home{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* height: 85vh; */
-    height: max-content;
-    width: 100vw;
-    margin-bottom: 16px;
-    margin-top: 15px;
+.home {
+	display: flex;
+	/* align-items: center; */
+	justify-content: center;
+	height: max-content;
+	width: 100vw;
+	margin-bottom: 16px;
+	margin-top: 15px;
 }
-.home_left{
-    width: 35vw;
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.home_left {
+	width: 35vw;
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	margin-top: 112px;
 }
-.home_left >h2{
-    font-size: 2.5rem;
-    color: blue;
-    font-weight: bold;
+.home_left > h2 {
+	font-size: 2.5rem;
+	color: blue;
+	font-weight: bold;
 }
-.home_left >span{
-    font-size: 3rem;
-    color: brown;
-    font-weight: bold;
-    margin-left: 170px;
-    width: fit-content;
-    padding: 0 10px;
-    box-shadow: 0px 0px 25px 0px rgb(150, 75, 0, 0.5);
-    border-radius: 24px;
+.home_left > span {
+	font-size: 3rem;
+	color: brown;
+	font-weight: bold;
+	margin-left: 170px;
+	width: fit-content;
+	padding: 0 10px;
+	box-shadow: 0px 0px 25px 0px rgb(150, 75, 0, 0.5);
+	border-radius: 24px;
 }
-.home_left >p{
-    font-size: 16px;
-    color: green;
-    font-weight: 100;
-    margin-top: 10px;
-    padding-left: 240px;
+.home_left > p {
+	font-size: 16px;
+	color: green;
+	font-weight: 100;
+	margin-top: 10px;
+	padding-left: 240px;
 }
-.left_button{
-    width: 190px;
-    padding: 6px;
-    background: none;
-    border-radius: 22px;
-    margin: 20px 120px;
-    cursor: pointer;
+.left_button {
+	width: 190px;
+	padding: 6px;
+	background: none;
+	border-radius: 22px;
+	margin: 20px 120px;
+	cursor: pointer;
 }
-.left_button:hover{
-    color: brown;
-    border-color: brown;
-    text-decoration: underline;
-    box-shadow: 0px 0px 25px 0px rgb(150, 75, 0, 0.5);
+.left_button:hover {
+	color: brown;
+	border-color: brown;
+	text-decoration: underline;
+	box-shadow: 0px 0px 25px 0px rgb(150, 75, 0, 0.5);
 }
-.home_icons{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 60px;
-    border-radius: 20%;
-    padding: 8px;
-    box-shadow: 0px 0px 25px 0px rgb(0, 0, 255, 0.5);
+.home_icons {
+	display: flex;
+	justify-content: space-around;
+	margin-top: 60px;
+	border-radius: 20%;
+	padding: 8px;
+	box-shadow: 0px 0px 25px 0px rgb(0, 0, 255, 0.5);
+}
+.icons_img {
+	border-radius: 30%;
+	box-shadow: 0px 0px 25px 0px rgb(150, 75, 0, 0.5);
+}
+.icons_img:hover {
+	transform: scale(1.3);
+	box-shadow: 0px 0px 25px 0px rgb(150, 75, 0, 0.5);
+}
+.home_right {
+	width: 60vw;
+	/* height: 80vh; */
+	height: fit-content;
+	margin-left: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 0px 0px 15px 0px rgb(150, 75, 0, 0.5);
+	border-radius: 26px;
+	margin-top: 62px;
+	padding-top: 10px;
+	padding-bottom: 18px;
+}
+.home_right > h2 {
+	font-size: 1.5rem;
+	font-weight: bold;
+	box-shadow: 0px 0px 15px 0px rgb(0, 0, 255, 0.5);
+	border-radius: 10px;
+	padding: 0 8px;
+	margin-top: 8px;
+}
+.home_right-slider {
+	margin-top: 33px;
+	width: 100%;
+}
+.home_right-slider .swiper_slide {
+	width: 550px;
+}
+.swipers {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.swipers > span {
+	margin-top: 10px;
+	font-size: 1rem;
+	font-weight: bold;
+}
+.swiper_img {
+	width: 58vw;
+	overflow: auto;
+	filter: drop-shadow(-12px 15px 13px rgba(0, 0, 255, 0.25));
+	border-radius: 12px;
+}
 
+.certifiedContainer {
+	margin-top: 52px;
+	margin-bottom: 52px;
 }
-.icons_img{
-    border-radius: 30%;
-    box-shadow: 0px 0px 25px 0px rgb(150, 75, 0, 0.5);
-
-
-}
-.icons_img:hover{
-    transform: scale(1.3);
-    box-shadow: 0px 0px 25px 0px rgb(150, 75, 0, 0.5);
-}
-.home_right{
-    width: 60vw;
-    /* height: 80vh; */
-    height: fit-content;
-    margin-left: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 0px 15px 0px rgb(150, 75, 0, 0.5);
-    border-radius: 34px;
-    margin-top: 12px;
-}
-.home_right >h2{
-    font-size: 1.5rem;
-    font-weight: bold;
-    box-shadow: 0px 0px 15px 0px rgb(0, 0, 255, 0.5);
-    border-radius: 10px;
-    padding: 0 8px;
-    margin-top: 8px
-}
-.home_right-slider{
-    margin-top: 33px;
-    width: 100%;
-}
-.home_right-slider .swiper_slide{
-    width: 550px;
-}
-.swipers{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.swipers >span{
-    margin-top: 10px;
-    font-size: 1rem;
-    font-weight: bold;
-}
-.swiper_img{
-    width: 58vw;
-    overflow: auto;
-    filter: drop-shadow(-12px 15px 13px rgba(0, 0, 255, 0.25));
-    border-radius: 12px;
+/* .certified-logo {
+	margin-right: 32px;
+	margin-left: 56px;
+} */
+.certifiedImages {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	gap: 22px;
+	margin-top: 22px;
 }
 
 @media screen and (max-width: 580px) {
-    .home{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 140vh;
-    }
-    .home_left{
-        width: 100vw;
-        height: 65vh;
-        /* border-top: 2px solid gray; */
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-top: -60px;
-    }
-    .home_left >h2{
-        font-size: 2rem;
-        font-weight: bold;
-        margin-left: -155px;
-        margin-top: 20px;
-    }
-    .home_left >span{
-        font-size: 2.4rem;
-        font-weight: bold;
-        margin-left: 130px;
-        border-radius: 17px;
-    }
-    .home_left >p{
-        font-size: 16px;
-        font-weight: 100;
-        margin-top: 10px;
-        padding-left: 140px;
-    }
-    .left_button{
-        border-radius: 10px;
-        margin: 50px 0 10px 0;
-        box-shadow: 0px 0px 15px 0px rgb(0, 0, 0, 0.5);
-    }
-    .left_button:hover{
-        text-decoration: underline;
-    }
-    .home_icons{
-        margin-top: 10px;
-        gap: 20px;
-        /* display: flex;
+	.home {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		/* height: 140vh; */
+	}
+	.home_left {
+		width: 100vw;
+		/* height: 65vh; */
+		/* border-top: 2px solid gray; */
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 60px;
+	}
+	.home_left > h2 {
+		font-size: 2rem;
+		font-weight: bold;
+		margin-left: -155px;
+		margin-top: 20px;
+	}
+	.home_left > span {
+		font-size: 2.4rem;
+		font-weight: bold;
+		margin-left: 130px;
+		border-radius: 17px;
+	}
+	.home_left > p {
+		font-size: 16px;
+		font-weight: 100;
+		margin-top: 10px;
+		padding-left: 140px;
+	}
+	.left_button {
+		border-radius: 10px;
+		margin: 50px 0 10px 0;
+		box-shadow: 0px 0px 15px 0px rgb(0, 0, 0, 0.5);
+	}
+	.left_button:hover {
+		text-decoration: underline;
+	}
+	.home_icons {
+		margin-bottom: 40px;
+		gap: 20px;
+
+		/* display: flex;
         justify-content: space-around; */
-    }
-    .home_right{
-        width: 96vw;
-        height: 60vh;
-        margin-left: 0;
-        margin-top: 20px;
-        border-radius: 24px;
-    }
-    .home_right >h2{
-        font-size: 1.4rem;
-        font-weight: bold;
-        border-radius: 10px;
-        padding: 0 8px;
-    }
-    .home_right-slider{
-        margin-top: 28px;
-    }
-    .swipers >span{
-        margin-top: 15px;
-        font-size: 15px;
-        font-weight: bold;
-    }
-    .swiper_img{
-        width: 94vw;
-        overflow: auto;
-        border-radius: 12px;
-    }
+	}
+	.home_right {
+		width: 96vw;
+		/* height: 60vh; */
+		margin-left: 0;
+		margin-top: 20px;
+		border-radius: 24px;
+	}
+	.home_right > h2 {
+		font-size: 1.4rem;
+		font-weight: bold;
+		border-radius: 10px;
+		padding: 0 8px;
+	}
+	.home_right-slider {
+		margin-top: 28px;
+	}
+	.swipers > span {
+		margin-top: 15px;
+		font-size: 15px;
+		font-weight: bold;
+	}
+	.swiper_img {
+		width: 94vw;
+		overflow: auto;
+		border-radius: 12px;
+	}
 }
 
-@media screen and (min-width:581px) and (max-width:990px) {
-    .home{
-        margin-top: 0px;
-        height: 70vh;
-    }
-    .home_left >h2{
-        font-size: 1.7rem;
-    }
-    .home_left >span{
-        font-size: 2rem;
-        margin-left: 70px;
-        border-radius: 20px;
-    }
-    .home_left >p{
-        padding-left: 40px;
-    }
-    .left_button{
-        border-radius: 18px;
-        margin: 20px 20px;
-        margin-top: 40px;
-    }
-    .home_right{
-        height: 60vh;
-        border-radius: 24px;
-    }
-    .home_right >h2{
-        font-size: 1.1rem;
-        margin-top: 8px
-    }
-    .home_right-slider{
-        margin-top: 18px;
-    }
-    .swipers >span{
-        font-size: 0.9rem;
-    }
+@media screen and (min-width: 581px) and (max-width: 990px) {
+	.home {
+		margin-top: 10px;
+		/* height: 70vh; */
+	}
+	.home_left > h2 {
+		font-size: 1.7rem;
+	}
+	.home_left > span {
+		font-size: 2rem;
+		margin-left: 70px;
+		border-radius: 20px;
+	}
+	.home_left > p {
+		padding-left: 35px;
+	}
+	.left_button {
+		border-radius: 18px;
+		margin: 20px 20px;
+		margin-top: 40px;
+	}
+	.home_right {
+		/* height: 60vh; */
+		border-radius: 24px;
+	}
+	.home_right > h2 {
+		font-size: 1.1rem;
+		margin-top: 8px;
+	}
+	.home_right-slider {
+		margin-top: 18px;
+	}
+	.swipers > span {
+		font-size: 0.9rem;
+	}
 }
